--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest = ">=8.2.2"
 pytest-asyncio = "^0.21.1"
 pytest-rerunfailures = "^12.0"
 pytest-order = "^1.2.1"
+docker = ">=6.1.3"
 
 [tool.poetry.group.dev.dependencies]
 bumpversion = "^0.6.0"
