--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,7 +7,7 @@ parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
 serialize =
 	{major}.{minor}.{patch}
 
-[bumpversion:file:./cbpkg/__init__.py]
+[bumpversion:file:./cbcbase/__init__.py]
 
 [bumpversion:file:README.md]
 
